--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -3,6 +3,26 @@
 
 # Uncomment the following line to enable the Sofle OLED Display
 CONFIG_ZMK_DISPLAY=y
+// Configurazione per OLED
+define OLED_DRIVER_ENABLE       true
+define OLED_TIMEOUT             3000          // Timeout dello schermo OLED (in millisecondi)
+define OLED_I2C_ADDRESS         0x3C          // Indirizzo I2C del display OLED
+define OLED_DISPLAY_WIDTH       128           // Larghezza del display OLED
+define OLED_DISPLAY_HEIGHT      64            // Altezza del display OLED
+
+// Abilita il rendering del contenuto sullo schermo OLED
+define OLED_FONT_H             6              // Altezza dei caratteri
+define OLED_FONT_W             6              // Larghezza dei caratteri
+
+// Configurazione per RGB
+define RGBLIGHT_ENABLE         true           // Abilita l'illuminazione RGB
+define RGBLIGHT_RGB_LED_COUNT  35            // Numero di LED RGB
+define RGBLIGHT_HUE_STEP       5              // Passo per il cambiamento del colore
+define RGBLIGHT_SAT_STEP       5              // Passo per la saturazione
+define RGBLIGHT_VAL_STEP       5              // Passo per la luminosità
+define RGBLIGHT_MODE           RGBLIGHT_MODE_STATIC_LIGHT // Modalità di luce statica
+define RGBLIGHT_COLOR_LAYER_0  RGB(255, 0, 0) // Colore per il layer 0 (rosso)
+
 
 # Uncomment these two lines to add support for encoders
 CONFIG_EC11=y
